# vibe-coder-3d

./: .cursorrules  .env.example  .eslintrc.js  .gitignore  .model-optimization.config.json  .prettierrc  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  EXTERNAL-SCRIPT-SYSTEM.md  FUTURE-TASKS.md  IMPLEMENTED-FEATURES-LIST.md  INSTANCING_IMPLEMENTATION.md  MIGRATION_NOTES.md  OPTIMIZATION-SUMMARY.md  PROJECT_STATUS.md  README.md  REDDIT_POST_DRAFT.md  ROADMAP.md  SCALABILITY-IMPROVEMENTS.md  SCRIPTING_API_VISUAL_VERIFICATION.md  SCRIPTING_ARCHITECTURE_ANALYSIS.md  SCRIPTING_EXPLORATION_INDEX.md  SCRIPTING_KEY_FILES.md  SCRIPT_SYSTEM_ARCHITECTURE_ANALYSIS.md  TEST-CLEANUP-SUMMARY.md  TESTING-MATERIALS.md  asset-tasklist.md  assets-tasklist.md  code-smell-report.md  eslint.config.js  game-editor-tasks.md  index.html  low-poly-prompts.txt  package-lock.json  package.json  performance-audit-report.md  performance-report.md  scalability-report.md  tailwind.config.js  (+10 more)
rust/engine/: ARCHITECTURE_STATUS.md  BVH_IMPLEMENTATION_SUMMARY.md  BVH_INTEGRATION_TEST.md  CLAUDE.md  Cargo.toml  IMPLEMENTATION.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_ARCHITECTURE_PLAN.md  INTEGRATION_AUDIT.md  INTEGRATION_PRIMITIVES_AUDIT.md  MISSING_FEATURES.md  PHASE_4_NOTES.md  README.md  REFACTORING_STATUS.md  TEST_COVERAGE.md  THREE_D_MIGRATION_PRD.md  VISUAL_DEBUG_REPORT.md  VISUAL_DEBUG_REPORT_allshapes.md  shapes-audit.md
rust/engine/.cargo/: config.toml
rust/engine/crates/: CLAUDE.md
rust/engine/crates/assets/: Cargo.toml
rust/engine/crates/assets/src/: geometry_meta.rs  gltf_loader.rs  lib.rs  material.rs  mesh_cache.rs  primitives.rs  primitives_cylinders.rs  primitives_decorative.rs  primitives_environment.rs  (+6 more)
rust/engine/crates/ecs-bridge/: CLAUDE.md  Cargo.toml
rust/engine/crates/ecs-manager/: CLAUDE.md  Cargo.toml
rust/engine/crates/physics/: CLAUDE.md  Cargo.toml
rust/engine/crates/scene/: CLAUDE.md
rust/engine/crates/scene-graph/: CLAUDE.md
rust/engine/crates/scripting/: Cargo.toml
rust/engine/src/: app.rs  app_threed.rs  bvh_demo.rs  bvh_integration_demo.rs  bvh_integration_test.rs  bvh_performance_test.rs  lib.rs  main.rs  threed_camera_manager.rs  threed_light_manager.rs  threed_mesh_manager.rs  threed_render_coordinator.rs  threed_renderer.rs  threed_renderer_test.rs  threed_scene_loader_state.rs
rust/engine/src/assets/: mod.rs
rust/engine/src/debug/: camera_orbit.rs  colliders.rs  config.rs  hud.rs  lines.rs  mod.rs  profiler.rs  state.rs
rust/engine/src/ecs/: mod.rs  scene.rs  scene_test.rs
rust/engine/src/io/: loader.rs  mod.rs  schema_validator.rs  validation.rs
rust/engine/src/render/: camera.rs  camera_behavior_test.rs  camera_test.rs  depth_texture.rs  integration_test.rs  lighting_test.rs  material.rs  material_test.rs  material_uniform.rs  mesh_cache.rs  mod.rs  pipeline.rs  pipeline_test.rs  primitives.rs  primitives_test.rs  renderer.rs  scene_renderer.rs  scene_renderer_old.rs  shader.wgsl  vertex.rs  vertex_test.rs
rust/engine/src/renderer/: audio_loader.rs  bvh_debug.rs  bvh_integration.rs  camera_follow.rs  camera_loader.rs  camera_renderer.rs  constants.rs  coordinate_conversion.rs  debug_gizmos.rs  debug_rendering.rs  enhanced_lights.rs  entity_loader.rs  instanced_loader.rs  light_loader.rs  light_loader_test.rs  lighting.rs  lighting_test.rs  lod_manager.rs  lod_selector.rs  material_manager.rs  material_overrides.rs  material_update.rs  mesh_filtering.rs  mesh_loader.rs  mod.rs  orbital_camera.rs  physics_sync.rs  post_process_targets.rs  post_processing.rs  primitive_mesh.rs  render_settings.rs  scene_loader.rs  scene_utilities.rs  screen_overlay.rs  skybox.rs  terrain_generator.rs  text_overlay.rs  texture_cache.rs  transform_utils.rs  visibility.rs
rust/engine/src/spatial/: bvh_manager.rs  intersect.rs  mesh_bvh.rs  mod.rs  primitives.rs  scene_bvh.rs  scripting_adapter.rs
rust/engine/src/threed/: mod.rs  threed_camera_manager.rs  threed_context_state.rs  threed_light_manager.rs  threed_light_manager_test.rs  threed_mesh_manager.rs  threed_render_coordinator.rs  threed_renderer.rs  threed_renderer_test.rs
rust/engine/src/util/: mod.rs  screenshot.rs  time_test.rs
rust/engine/tests/: camera_integration_test.rs  lod_integration_test.rs  physics_integration_test.rs  shadow_integration_simple_test.rs  shadow_pipeline_documentation_test.rs
(+1202 files in other folders)
