[workspace]
members = [
    ".",
    "crates/scene",
    "crates/ecs-bridge",
    "crates/scene-graph",
    "crates/assets",
    "crates/wasm-bridge",
    "crates/physics",
]

[package]
name = "vibe-coder-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
# Internal workspace dependencies
vibe-scene = { path = "crates/scene" }
vibe-ecs-bridge = { path = "crates/ecs-bridge" }
vibe-scene-graph = { path = "crates/scene-graph" }
vibe-assets = { path = "crates/assets" }
vibe-wasm-bridge = { path = "crates/wasm-bridge" }
vibe-physics = { path = "crates/physics" }

# Physics (for debug collider visualization)
rapier3d = { version = "0.17", features = ["dim3"] }
parry3d = "0.13"

# Core rendering (three-d)
winit = "0.28"
three-d = "0.17"
three-d-asset = "0.7"

# Math
glam = { version = "0.27", features = ["serde"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Asset loading
gltf = { version = "1.4", features = ["utils"], optional = true }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
env_logger = "0.11"
log = "0.4"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Environment variables
dotenvy = "0.15"

# Async runtime helper
pollster = "0.3"

# Screenshot support
image = "0.25"
xcap = "0.0.12"

[features]
default = ["gltf-support"]
gltf-support = ["gltf"]

[[bin]]
name = "vibe-engine"
path = "src/main.rs"
